--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "release": "build"
   },
   "dependencies": {
+    "bulma": "^0.9.1",
+    "jquery": "^3.5.1",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "jquery": "^3.5.1",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
