--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     ]
   },
   "scripts": {
-    "postinstall": "install-app-deps",
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "build"
@@ -31,7 +30,6 @@
     "overlayscrollbars": "^1.13.0"
   },
   "devDependencies": {
-    "electron": "^9.3.1",
-    "electron-builder": "^22.8.0"
+    "electron": "^9.3.1"
   }
 }
